--- a/css/styles.css
+++ b/css/styles.css
@@ -1,130 +1,101 @@
-body{
-  min-width: 575.98px;
-}
+body {
+  min-width: 575.98px; }
 
-.header{
-  background-color: navy;
-}
+.header {
+  background-color: navy; }
 
-.circulo-header-wrapper{
-  width:20.5rem;
-  height:20.5rem;
+.circulo-header-wrapper {
+  width: 20.5rem;
+  height: 20.5rem;
   background-color: navy;
   border-radius: 50%;
-  border: 0.1rem solid white;
-}
+  border: 0.1rem solid white; }
 
-.circulo-header-wrapper > .circulo-header{
+.circulo-header-wrapper:hover {
+  filter: brightness(130%); }
+
+.circulo-header-wrapper > .circulo-header {
   /* margin: 0 auto; */
   width: 20rem;
-  height:20rem;
+  height: 20rem;
   background-color: navy;
   border-radius: 50%;
   border: 0.1rem dashed white;
   /* text-align: center; */
   /* align-items: center; */
   /* justify-content: center; */
-  /* display: flex; */
-}
+  /* display: flex; */ }
 
-.circulo-header > h2{
+.circulo-header > h2 {
   font-family: "Lobster", cursive;
-  font-size: 2.3rem;
-}
+  font-size: 2.3rem; }
 
-.banner{
-  height: 6rem;
-}
+.banner {
+  height: 6rem; }
 
-.banner-wrapper > h2{
+.banner-wrapper > h2 {
   font-size: 1.5rem;
   color: navy;
-  letter-spacing: 1rem;
-}
+  letter-spacing: 1rem; }
 
-.presentacion-p{
+.presentacion-p {
   font-family: 'Bad Script', cursive;
-  font-size: 1.6rem;
-}
+  font-size: 1.6rem; }
 
-.presentacion-p-2{
+.presentacion-p-2 {
   font-family: 'Bad Script', cursive;
-  font-size: 3rem;
-}
+  font-size: 3rem; }
 
-.box-card-1{
+.box-card-1 {
   background-repeat: no-repeat;
-  background-size:cover;
-  font-family: 'Bad Script', cursive;
-  font-weight: bold;
+  background-size: cover;
+  /* font-family: 'Bad Script', cursive; */
+  font-family: 'Roboto Condensed', sans-serif;
+  /* font-weight: bold; */
   font-size: 1.4rem;
   min-height: 300px;
   max-height: 50vw;
   filter: opacity(85%);
-  color: white;
-}
+  color: white; }
 
-.box-card-1:hover{
-  filter:brightness(100%);
-  color: #fefbd8;
-}
+.box-card-1:hover {
+  filter: brightness(100%);
+  color: #fefbd8; }
 
-.icono{
-  font-size: 3rem;
-}
+.icono {
+  font-size: 3rem; }
 
-.footer{
+.footer {
   background-color: #003648;
-  height:300px;
-}
+  height: 300px; }
 
 /* Extra small devices (portrait phones, less than 576px) */
-@media (max-width: 575.98px) {
-
-}
-
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
-
-  .box-card-1{
-    font-size: 1.8em;
-  }
-}
-
+  .box-card-1 {
+    font-size: 1.8em; } }
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
+  .icono {
+    font-size: 2.8rem; }
 
-  .icono{
-    font-size: 2.8rem;
-  }
-
-  .box-card-1{
-    font-size: 2.2rem;
-  }
- }
-
+  .box-card-1 {
+    font-size: 2.2rem; } }
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-
-  .box-card-1{
+  .box-card-1 {
     height: 25vw;
-      font-size: 1.8rem;
-  }
+    font-size: 1.8rem; }
 
-  .icono{
-    font-size: 3.5rem;
-  }
-
-}
-
+  .icono {
+    font-size: 3.5rem; } }
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  .box-card-1{
+  .box-card-1 {
     height: 25vw;
-      font-size: 1.8rem;
-  }
+    font-size: 1.8rem; }
 
-  .icono{
-    font-size: 3.5rem;
-  }
-}
+  .icono {
+    font-size: 3.5rem; } }
+
+/*# sourceMappingURL=styles.css.map */
